upgrade dependency versions. Change java version. Add elasticsearch-client and jackson dependency